It was done a lot of things, such as: -->styles of body -->unique page of background -->text style onto body-page

--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
 </nav>
 
 <!-- Begin page content -->
+<body background="http://4.bp.blogspot.com/-vmXGEv7Os9Y/TsEungh-6GI/AAAAAAAAFjo/_fTUzlsC9HY/s1600/0_74541_7ab3c3fa_XXXL.jpg"></body>
 <div class="container">
     <div class="page-header">
-        <h1>Sticky footer with fixed navbar</h1>
+         <h1> <p align="center"><b> Fresh news about moovies and IT</b> </p> </h1>
         <select name="article">
             <option value="title1">article 1</option>
             <option value="title2">article 2</option>
@@ -59,34 +60,37 @@
         </select>
         <articlearticle>
     </div>
-    <h1>Shocker! Facebook Changes Its Algorithm to Avoid ‘Clickbait’</h1>
-    <p><div><p>Facebook says it plans to marginalize what it considers to be “clickbait” news stories from publishers in its news feed, in another step to keep its 1.71 billion members regularly coming back to its social network.</div>
 
+    <h1><p align="center"> Shocker! Facebook Changes Its Algorithm to Avoid ‘Clickbait’</p></h1>
+    <p><div><p>Facebook says it plans to marginalize what it considers to be “clickbait” news stories from publishers in its news feed, in another step to keep its 1.71 billion members regularly coming back to its social network.</div>
         <details onclose="open">
          In a change to its news feed algorithm on Thursday, Facebook said certain types of headlines would be classified as clickbait, those that “withhold or distort information.” Those stories will then appear less frequently in users’ feeds, the company said.
-
+<p></p>
         “We want publishers to post content that people care about, and we think people care about headlines that are much more straightforward,” Adam Mosseri, Facebook’s vice president for product management for the news feed, said in an interview.
 
         Facebook has been working to maintain the integrity of the news feed to keep users happy and spending as much time on Facebook as possible. The Silicon Valley company constantly tweaks its algorithms, and in June it made a sweeping set of changes that would rank publisher content in general less favorably in the news feed.
-
+            <p></p>
         Thursday’s algorithm change is not the first time Facebook has cracked down on clickbait. In 2014, the company said it was moving to feature spamlike articles less prominently by looking at other factors, such as if a user has “liked” and then quickly “unliked” a story that appeared in the feed. Other factors, such as how much time people spent reading an article after clicking on it, also contributed to Facebook’s clickbait calculations.
 
-        Thursday’s announcement goes a step further. Facebook spent months classifying phrases commonly used in clickbait headlines. Mr. Mosseri offered examples like “The Dog Barked at the Deliveryman and His Reaction Was Priceless,” or “When She Looked Under Her Couch Cushions and Saw THIS … I Was SHOCKED!”
+            <p></p>     Thursday’s announcement goes a step further. Facebook spent months classifying phrases commonly used in clickbait headlines. Mr. Mosseri offered examples like “The Dog Barked at the Deliveryman and His Reaction Was Priceless,” or “When She Looked Under Her Couch Cushions and Saw THIS … I Was SHOCKED!”
 
         The company’s algorithms then took note of the websites from which the articles were coming, and could detect patterns of traffic coming from those sites over time. That process was then automated, and content identified as clickbait will now appear lower in the news feed than before. Mr. Mosseri likened the practice to a kind of email spam filtering process.
 
         The move will most likely heighten the anxiety of publishers that rely heavily on Facebook for traffic and often complain about having little insight into the company’s decision-making on how its all-powerful algorithm functions.
-</p>
+
+            </p>
+         <p align="center"><img src="https://static01.nyt.com/images/2016/08/05/business/05FACEBOOK/05FACEBOOK-master675.jpg"></p>
             </details>
         </address>
-    <h1>Apple Will Pay a ‘Bug Bounty’ to Hackers Who Report Flaws</h1>
+    <h1><p align="center"> Apple Will Pay a ‘Bug Bounty’ to Hackers Who Report Flaws</p></h1>
    <p> LAS VEGAS — Apple, which has been criticized in recent years for failing to pay outside hackers who report bugs in its products, said on Thursday that it would begin offering a so-called bug bounty to technologists who alert the company to flaws.
 </p>
 <details onclose="open">
+
     At the Black Hat hacking conference, Apple announced a list of vulnerabilities that would command big bounties, including $25,000 for ways around Apple’s digital compartments and into its customers’ data, $50,000 for bugs that give hackers a way into iCloud data, and $200,000 to turn over critical vulnerabilities in Apple’s firmware — the software that lies closest to the bare metal of the machine.
 
     Apple said that if hackers donated their rewards to charity, it would match their donation. “We want to reward the people, and frankly the creativity it takes to find bugs in these categories,” said Ivan Krstic, Apple’s head of security engineering and architecture.
-
+<p></p>
     For six years, nearly every company in Silicon Valley has been rewarding hackers who turn over bugs — a term for flaws that can make a product vulnerable to intrusion — in their systems, with cash. The hope is that the money will be an incentive to keep those flaws out of the hands of organized groups or spy agencies willing to pay big money to learn about them.
 
     But Apple had stayed away from the practice. Instead, it had credited anyone who turned over bugs by putting their names on its website — a far cry from the tens of thousands of dollars, and in some cases hundreds of thousands of dollars, companies like Google and Facebook were willing to pay.
@@ -95,20 +99,27 @@
 
     The annual Black Hat conference, now in its 19th year, is a gathering place for all sorts of experts on computer security, including hackers, tech industry executives and government officials.
 </details>
+<hr align="center" color="gray" width="100%">
+
+
+
 </div>
 
-
+<p align="center"> <a href="http://static.usatoday.com/mobile-apps/" target="_new">new Apps</a></p>
 <footer class="footer">
     <div class="container">
+
         <p class="text-muted">Place sticky footer content here.</p>
+        <article>&reg;K&KO</article>
     </div>
+
 </footer>
+
 
 
 <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.js"></script>
 <script src="js/scripts.js"></script>
-
 
 </body>
 </html>
