It was done a lot of things, such as: -->styles of body -->unique page of background -->text style onto body-page -->added new styles of buttons

--- a/index.html
+++ b/index.html
@@ -46,10 +46,34 @@
         </div><!--/.nav-collapse -->
     </div>
 </nav>
+<head>
+    <meta charset="utf-8">
+    <title>aside</title>
+    <style>
+        aside {
+            background: right;
+            padding: 80px;
+            width: 10px;
+            float: right;
+        }
+        article {
+            margin-right: 480px;
+        }
+    </style>
+</head>
+<body>
 
+<aside>
+    <header><h5><button><b>Links</b></button></h5></header>
+
+    <button type="button" class="btn btn-success btn-md"><a href="http://static.usatoday.com/mobile-apps/" target="_new" >APPS</a></button>
+    <button type="button" class="btn btn-warning"><a href="http://www.w3schools.com/bootstrap/bootstrap_buttons.asp" target="_new">BUTTONS</a></button>
+
+</aside>
 <!-- Begin page content -->
 <body background="http://4.bp.blogspot.com/-vmXGEv7Os9Y/TsEungh-6GI/AAAAAAAAFjo/_fTUzlsC9HY/s1600/0_74541_7ab3c3fa_XXXL.jpg"></body>
 <div class="container">
+
     <div class="page-header">
          <h1> <p align="center"><b> Fresh news about moovies and IT</b> </p> </h1>
         <select name="article">
@@ -63,7 +87,7 @@
 
     <h1><p align="center"> Shocker! Facebook Changes Its Algorithm to Avoid ‘Clickbait’</p></h1>
     <p><div><p>Facebook says it plans to marginalize what it considers to be “clickbait” news stories from publishers in its news feed, in another step to keep its 1.71 billion members regularly coming back to its social network.</div>
-        <details onclose="open">
+<details onclose="open">
          In a change to its news feed algorithm on Thursday, Facebook said certain types of headlines would be classified as clickbait, those that “withhold or distort information.” Those stories will then appear less frequently in users’ feeds, the company said.
 <p></p>
         “We want publishers to post content that people care about, and we think people care about headlines that are much more straightforward,” Adam Mosseri, Facebook’s vice president for product management for the news feed, said in an interview.
@@ -77,7 +101,7 @@
         The company’s algorithms then took note of the websites from which the articles were coming, and could detect patterns of traffic coming from those sites over time. That process was then automated, and content identified as clickbait will now appear lower in the news feed than before. Mr. Mosseri likened the practice to a kind of email spam filtering process.
 
         The move will most likely heighten the anxiety of publishers that rely heavily on Facebook for traffic and often complain about having little insight into the company’s decision-making on how its all-powerful algorithm functions.
-
+ <p></p>http://www.nytimes.com
             </p>
          <p align="center"><img src="https://static01.nyt.com/images/2016/08/05/business/05FACEBOOK/05FACEBOOK-master675.jpg"></p>
             </details>
@@ -98,6 +122,7 @@
     The lack of an Apple bug bounty program made headlines earlier this year when the F.B.I. announced that it had paid hackers more than $1 million for a backdoor into Apple’s iPhone.
 
     The annual Black Hat conference, now in its 19th year, is a gathering place for all sorts of experts on computer security, including hackers, tech industry executives and government officials.
+    <p></p>http://www.nytimes.com
 </details>
 <hr align="center" color="gray" width="100%">
 
@@ -114,8 +139,6 @@
     </div>
 
 </footer>
-
-
 
 <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.js"></script>
