It was done a lot of things, such as: -->styles of body -->unique page of background -->text style onto body-page -->added new styles of buttons

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     </div>
 </nav>
 <head>
+
     <meta charset="utf-8">
     <title>aside</title>
     <style>
@@ -61,20 +62,20 @@
         }
     </style>
 </head>
+<!----------------  Field aside ---------------------------------------->
 <body>
-
 <aside>
     <header><h4><button><b>Links</b></button></h4></header>
-
     <button type="button" class="btn btn-success btn-md"><a href="http://static.usatoday.com/mobile-apps/" target="_new" >APPS</a></button>
     <button type="button" class="btn btn-warning"><a href="http://www.w3schools.com/bootstrap/bootstrap_buttons.asp" target="_new">BUTTONS</a></button>
-
 </aside>
+
 <!-- Begin page content -->
 <body background="http://4.bp.blogspot.com/-vmXGEv7Os9Y/TsEungh-6GI/AAAAAAAAFjo/_fTUzlsC9HY/s1600/0_74541_7ab3c3fa_XXXL.jpg"></body>
 <div class="container">
 
     <div class="page-header">
+
          <h1> <p align="center"><b> Fresh news about moovies and IT</b> </p> </h1>
         <select name="article">
             <option value="title1">article 1</option>
@@ -126,18 +127,17 @@
 </details>
 <hr align="center" color="gray" width="100%">
 
-
-
 </div>
 
 <p align="center"> <a href="http://static.usatoday.com/mobile-apps/" target="_new">new Apps</a></p>
 <footer class="footer">
     <div class="container">
 
+    <!---------------- Logo & Licence field ----------------->
         <p class="text-muted">Place sticky footer content here.</p>
         <article>&reg;K&KO</article>
     </div>
-
+   <!------------------------------------------------------->
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
@@ -145,4 +145,9 @@
 <script src="js/scripts.js"></script>
 
 </body>
+<a href="#" class="btn btn-info btn-lg">
 </html>
+   <!--------------------Button "UP"------------------------------->
+<div style="position: relative; height: 15px; width: 30px;">
+<span class="glyphicon glyphicon-menu-up"></span> Up
+</div>
