--- a/index.html
+++ b/index.html
@@ -1,153 +1,242 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <title>Clothes & Styles</title>
+
+    <!-- background color with using file style.css -->
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+
+    <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <style>
+        .carousel-inner > .item > img,
+        .carousel-inner > .item > a > img {
+            width: 70%;
+            margin: auto;
+        }
+    </style>
+</head>
+
+    <!-- foto-gallery -->
     <title>Movie management application</title>
     <meta name="description" content="Movie management application">
     <meta name="author" content="Kostya Shuba">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.css">
     <link rel="stylesheet" href="css/styles.css">
-</head>
-<    >
-
-<!-- Fixed navbar -->
-<nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Project name</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li class="dropdown-header">Nav header</li>
-                        <li><a href="#">Separated link</a></li>
-                        <li><a href="#">One more separated link</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div><!--/.nav-collapse -->
-    </div>
-</nav>
-<head>
-
-    <meta charset="utf-8">
-    <title>aside</title>
-    <style>
-        aside {
-            background: right;
-            padding: 80px;
-            width: 10px;
-            float: right;
+    <style type="text/css">
+        .row {
+            margin-top:30px;
         }
-        article {
-            margin-right: 480px;
+
+        .left {
+            padding-left: 15px;
         }
     </style>
+
 </head>
-<!----------------  Field aside ---------------------------------------->
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+
 <body>
-<aside>
-    <header><h4><button><b>Links</b></button></h4></header>
-    <button type="button" class="btn btn-success btn-md"><a href="http://static.usatoday.com/mobile-apps/" target="_new" >APPS</a></button>
-    <button type="button" class="btn btn-warning"><a href="http://www.w3schools.com/bootstrap/bootstrap_buttons.asp" target="_new">BUTTONS</a></button>
-</aside>
 
-<!-- Begin page content -->
-<body background="http://4.bp.blogspot.com/-vmXGEv7Os9Y/TsEungh-6GI/AAAAAAAAFjo/_fTUzlsC9HY/s1600/0_74541_7ab3c3fa_XXXL.jpg"></body>
-<div class="container">
+        <!-- slide-show with using file style.css -->
+        <body>
+        <div class="container">
+            <br>
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                    <li data-target="#myCarousel" data-slide-to="3"></li>
+                </ol>
 
-    <div class="page-header">
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <img src="default%20foto/slider/1.jpeg" alt="Chania" width="460" height="345">
+                    </div>
 
-         <h1> <p align="center"><b> Fresh news about moovies and IT</b> </p> </h1>
-        <select name="article">
-            <option value="title1">article 1</option>
-            <option value="title2">article 2</option>
-            <option value="title3" label="article 3"></option>
+                    <div class="item">
+                        <img src="default%20foto/slider/2.jpg" alt="Chania" width="460" height="345">
+                    </div>
 
-        </select>
-        <articlearticle>
-    </div>
+                    <div class="item">
+                        <img src="default%20foto/slider/1.jpeg" alt="Flower" width="460" height="345">
+                    </div>
 
-    <h1><p align="center"> Shocker! Facebook Changes Its Algorithm to Avoid ‘Clickbait’</p></h1>
-    <p><div><p>Facebook says it plans to marginalize what it considers to be “clickbait” news stories from publishers in its news feed, in another step to keep its 1.71 billion members regularly coming back to its social network.</div>
-<details onclose="open">
-         In a change to its news feed algorithm on Thursday, Facebook said certain types of headlines would be classified as clickbait, those that “withhold or distort information.” Those stories will then appear less frequently in users’ feeds, the company said.
-<p></p>
-        “We want publishers to post content that people care about, and we think people care about headlines that are much more straightforward,” Adam Mosseri, Facebook’s vice president for product management for the news feed, said in an interview.
+                    <div class="item">
+                        <img src="default%20foto/camicia/preview.jpg" alt="Flower" width="460" height="345">
+                    </div>
+                </div>
+                </div>
+            </div>
+        </body>
 
-        Facebook has been working to maintain the integrity of the news feed to keep users happy and spending as much time on Facebook as possible. The Silicon Valley company constantly tweaks its algorithms, and in June it made a sweeping set of changes that would rank publisher content in general less favorably in the news feed.
-            <p></p>
-        Thursday’s algorithm change is not the first time Facebook has cracked down on clickbait. In 2014, the company said it was moving to feature spamlike articles less prominently by looking at other factors, such as if a user has “liked” and then quickly “unliked” a story that appeared in the feed. Other factors, such as how much time people spent reading an article after clicking on it, also contributed to Facebook’s clickbait calculations.
 
-            <p></p>     Thursday’s announcement goes a step further. Facebook spent months classifying phrases commonly used in clickbait headlines. Mr. Mosseri offered examples like “The Dog Barked at the Deliveryman and His Reaction Was Priceless,” or “When She Looked Under Her Couch Cushions and Saw THIS … I Was SHOCKED!”
 
-        The company’s algorithms then took note of the websites from which the articles were coming, and could detect patterns of traffic coming from those sites over time. That process was then automated, and content identified as clickbait will now appear lower in the news feed than before. Mr. Mosseri likened the practice to a kind of email spam filtering process.
+        <!------------------------- Navbar here ------------------->
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand"  href="#">CLOTH & FASHION</a>
+                </div>
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="#">Home</a></li>
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Page 1-1</a></li>
+                                <li><a href="#">Page 1-2</a></li>
+                                <li><a href="#">Page 1-3</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">Page 2</a></li>
+                        <li><a href="#">Page 3</a></li>
+                    </ul>
 
-        The move will most likely heighten the anxiety of publishers that rely heavily on Facebook for traffic and often complain about having little insight into the company’s decision-making on how its all-powerful algorithm functions.
- <p></p>http://www.nytimes.com
-            </p>
-         <p align="center"><img src="https://static01.nyt.com/images/2016/08/05/business/05FACEBOOK/05FACEBOOK-master675.jpg"></p>
-            </details>
-        </address>
-    <h1><p align="center"> Apple Will Pay a ‘Bug Bounty’ to Hackers Who Report Flaws</p></h1>
-   <p> LAS VEGAS — Apple, which has been criticized in recent years for failing to pay outside hackers who report bugs in its products, said on Thursday that it would begin offering a so-called bug bounty to technologists who alert the company to flaws.
-</p>
-<details onclose="open">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    </ul>
+                </div>
 
-    At the Black Hat hacking conference, Apple announced a list of vulnerabilities that would command big bounties, including $25,000 for ways around Apple’s digital compartments and into its customers’ data, $50,000 for bugs that give hackers a way into iCloud data, and $200,000 to turn over critical vulnerabilities in Apple’s firmware — the software that lies closest to the bare metal of the machine.
+            </div>
+        </nav>
 
-    Apple said that if hackers donated their rewards to charity, it would match their donation. “We want to reward the people, and frankly the creativity it takes to find bugs in these categories,” said Ivan Krstic, Apple’s head of security engineering and architecture.
-<p></p>
-    For six years, nearly every company in Silicon Valley has been rewarding hackers who turn over bugs — a term for flaws that can make a product vulnerable to intrusion — in their systems, with cash. The hope is that the money will be an incentive to keep those flaws out of the hands of organized groups or spy agencies willing to pay big money to learn about them.
 
-    But Apple had stayed away from the practice. Instead, it had credited anyone who turned over bugs by putting their names on its website — a far cry from the tens of thousands of dollars, and in some cases hundreds of thousands of dollars, companies like Google and Facebook were willing to pay.
 
-    The lack of an Apple bug bounty program made headlines earlier this year when the F.B.I. announced that it had paid hackers more than $1 million for a backdoor into Apple’s iPhone.
+        <!----------- foto-gallery ------------->
+        <div class="container">
+            <div id="demo1" class="collapse row">
+                <div class="col-md-2">
+                    <img src="default%20foto/Jackets/1.jpg">
+                </div>
+                <div class="col-md-2">
+                    <img src="default%20foto/Jackets/2.jpg">
+                </div>
+                <div class="col-md-2">
+                    <img src="http://placehold.it/180x150">
+                </div>
+                <div class="col-md-2">
+                    <img src="http://placehold.it/180x150">
+                </div>
+                <div class="col-md-2">
+                    <img src="http://placehold.it/180x150">
+                </div>
+                <div class="col-md-2">
+                    <img src="http://placehold.it/180x150">
+                </div>
+            </div>
+            <div id="demo2" class="collapse row">
+                <div class="col-md-2">
+                    <img src="default%20foto/Jackets%20wind/2.jpg">
+                </div>
+                <div class="col-md-2">
+                    <img src="default%20foto/Jackets%20wind/1.jpg">
+                </div>
+                <div class="col-md-2">
+                    <img src="default%20foto/Jackets%20wind/3.jpg">
+                </div>
+                <div class="col-md-2">
+                    <img src="http://placehold.it/180x150">
+                </div>
+                <div class="col-md-2">
+                    <img src="http://placehold.it/180x150">
+                </div>
+                <div class="col-md-2">
+                    <img src="http://placehold.it/180x150">
+                </div>
+            </div>
+            <div id="demo3" class="collapse row">
+                <div class="col-md-2">
+                    <img src="default%20foto/camicia/1.jpg">
+                </div>
+                <div class="col-md-2">
+                    <img src="default%20foto/camicia/2.jpg">
+                </div>
+                <div class="col-md-2">
+                    <img src="http://placehold.it/180x150">
+                </div>
+                <div class="col-md-2">
+                    <img src="http://placehold.it/180x150">
+                </div>
+                <div class="col-md-2">
+                    <img src="http://placehold.it/180x150">
+                </div>
+                <div class="col-md-2">
+                    <img src="http://placehold.it/180x150">
+                </div>
+            </div>
 
-    The annual Black Hat conference, now in its 19th year, is a gathering place for all sorts of experts on computer security, including hackers, tech industry executives and government officials.
-    <p></p>http://www.nytimes.com
-</details>
-<hr align="center" color="gray" width="100%">
+            <div class="row">
+                <div class="col-md-8 left">
+                    <img src="default%20foto/Jackets/maxresdefault3.jpg">
+                </div>
+                <div data-toggle="collapse" data-target="#demo1" class="col-md-4">
+                    <img src="default%20foto/shorts/444.jpg">
+                </div>
+            </div>
+            <div class="row">
+                <div data-toggle="collapse" data-target="#demo2" class="col-md-4 left">
+                    <img src="default%20foto/Jackets%20wind/22.jpg">
+                </div>
+                <div class="col-md-8">
+                    <img src="default%20foto/camicia/preview.jpg">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-8 left">
+                    <img src="default%20foto/pants/previewP.jpg">
+                </div>
+                <div data-toggle="collapse" data-target="#demo3" class="col-md-4">
+                    <img src="default%20foto/T-Shirts/preT.jpg">
+                </div>
 
-</div>
+            </div>
 
-<p align="center"> <a href="http://static.usatoday.com/mobile-apps/" target="_new">new Apps</a></p>
-<footer class="footer">
-    <div class="container">
 
-    <!---------------- Logo & Licence field ----------------->
-        <p class="text-muted">Place sticky footer content here.</p>
-        <article>&reg;K&KO</article>
-    </div>
-   <!------------------------------------------------------->
+<footer class="footer"><center>
+
+        <div class="copyright">
+
+            <span>Designed By</span>
+
+            <div class="table">
+            <table>
+                <tr>
+                    <!-- background color with using file style.css -->
+                    <th><a href="Licence.html" target="_blank">Licence</a></th>
+            <th><a href="https://github.com/SoClear" target="_blank">Github</a></th>
+                    <th><a href="http://www.cleardesign.me" target="_blank">WebSite</a></th>
+            <th><a href="https://www.facebook.com" >f</a>
+                <a href="http://https://twitter.com"><img src="default%20foto/logo/twit3.png" alt=""></a></th>
+                </tr>
+            </table>
+                </div>
+        </div>
+</center>
 </footer>
 
-<script src="https://code.jquery.com/jquery-3.1.0.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.js"></script>
-<script src="js/scripts.js"></script>
 
 </body>
-<a href="#" class="btn btn-info btn-lg">
+
 </html>
-   <!--------------------Button "UP"------------------------------->
-<div style="position: relative; height: 15px; width: 30px;">
-<span class="glyphicon glyphicon-menu-up"></span> Up
-</div>
