Directory with foto-examples has added--

--- a/index.html
+++ b/index.html
@@ -125,93 +125,48 @@
 
 
         <!----------- foto-gallery ------------->
-        <div class="container">
-            <div id="demo1" class="collapse row">
-                <div class="col-md-2">
-                    <img src="default%20foto/Jackets/1.jpg">
-                </div>
-                <div class="col-md-2">
-                    <img src="default%20foto/Jackets/2.jpg">
-                </div>
-                <div class="col-md-2">
-                    <img src="http://placehold.it/180x150">
-                </div>
-                <div class="col-md-2">
-                    <img src="http://placehold.it/180x150">
-                </div>
-                <div class="col-md-2">
-                    <img src="http://placehold.it/180x150">
-                </div>
-                <div class="col-md-2">
-                    <img src="http://placehold.it/180x150">
-                </div>
-            </div>
-            <div id="demo2" class="collapse row">
-                <div class="col-md-2">
-                    <img src="default%20foto/Jackets%20wind/2.jpg">
-                </div>
-                <div class="col-md-2">
-                    <img src="default%20foto/Jackets%20wind/1.jpg">
-                </div>
-                <div class="col-md-2">
-                    <img src="default%20foto/Jackets%20wind/3.jpg">
-                </div>
-                <div class="col-md-2">
-                    <img src="http://placehold.it/180x150">
-                </div>
-                <div class="col-md-2">
-                    <img src="http://placehold.it/180x150">
-                </div>
-                <div class="col-md-2">
-                    <img src="http://placehold.it/180x150">
-                </div>
-            </div>
-            <div id="demo3" class="collapse row">
-                <div class="col-md-2">
-                    <img src="default%20foto/camicia/1.jpg">
-                </div>
-                <div class="col-md-2">
-                    <img src="default%20foto/camicia/2.jpg">
-                </div>
-                <div class="col-md-2">
-                    <img src="http://placehold.it/180x150">
-                </div>
-                <div class="col-md-2">
-                    <img src="http://placehold.it/180x150">
-                </div>
-                <div class="col-md-2">
-                    <img src="http://placehold.it/180x150">
-                </div>
-                <div class="col-md-2">
-                    <img src="http://placehold.it/180x150">
-                </div>
+        <div class="col-sm-7 col-md-6">
+            <div class="thumbnail">
+                <img src="default%20foto/Jackets/maxresdefault3.jpg" alt="">
+                <a href><span>JACKETS</span>
+                </a>
             </div>
 
-            <div class="row">
-                <div class="col-md-8 left">
-                    <img src="default%20foto/Jackets/maxresdefault3.jpg">
-                </div>
-                <div data-toggle="collapse" data-target="#demo1" class="col-md-4">
-                    <img src="default%20foto/shorts/444.jpg">
-                </div>
+            <div class="thumbnail">
+                <img src="default%20foto/camicia/preview.jpg" alt="">
+                <a href><span>CAMICIA</span>
+                </a>
             </div>
-            <div class="row">
-                <div data-toggle="collapse" data-target="#demo2" class="col-md-4 left">
-                    <img src="default%20foto/Jackets%20wind/22.jpg">
-                </div>
-                <div class="col-md-8">
-                    <img src="default%20foto/camicia/preview.jpg">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-8 left">
-                    <img src="default%20foto/pants/previewP.jpg">
-                </div>
-                <div data-toggle="collapse" data-target="#demo3" class="col-md-4">
-                    <img src="default%20foto/T-Shirts/preT.jpg">
-                </div>
 
+            <div class="thumbnail">
+                <img src="default%20foto/pants/previewP.jpg" alt="">
+                <a href><span>PANTS</span>
+                </a>
             </div>
+        </div>
+
+
+        <div class="col-sm-5 col-md-6">
+            <div class="thumbnail">
+                <img src="default%20foto/shorts/444.jpg" alt="">
+                <a href><span>SHORTS</span>
+                </a>
+            </div>
+
+            <div class="thumbnail">
+                <img src="default%20foto/Jackets%20wind/22.jpg" alt="">
+                <a href><span>JACKETS TO WINDS</span>
+                </a>
+            </div>
+
+            <div class="thumbnail">
+                <img src="default%20foto/T-Shirts/preT.jpg" alt="">
+                <a href><span>T-SHIRTS</span>
+                </a>
+            </div>
+        </div>
+
+
 
 
 <footer class="footer"><center>
