--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Clothes & Styles</title>
+    <title>Clothes & Fashion</title>
 
     <!-- background color with using file style.css -->
     <link rel="stylesheet" href="css/style.css" type="text/css">
@@ -50,41 +50,45 @@
 
 <body>
 
-        <!-- slide-show with using file style.css -->
+        <!--------- slide-show with using file style.css ----->
         <body>
         <div class="container">
             <br>
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
                 <ol class="carousel-indicators">
-                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="0"></li>
                     <li data-target="#myCarousel" data-slide-to="1"></li>
-                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                    <li data-target="#myCarousel" data-slide-to="2" class="active"></li>
                     <li data-target="#myCarousel" data-slide-to="3"></li>
+                    <li data-target="#myCarousel" data-slide-to="4"></li>
                 </ol>
 
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner" role="listbox">
                     <div class="item active">
-                        <img src="default%20foto/slider/1.jpeg" alt="Chania" width="460" height="345">
+                        <img src="foto-project/slider.jpg" alt="" width="460" height="345">
                     </div>
 
                     <div class="item">
-                        <img src="default%20foto/slider/2.jpg" alt="Chania" width="460" height="345">
+                        <img src="foto-project/slider.jpg" alt="" width="460" height="345">
                     </div>
 
                     <div class="item">
-                        <img src="default%20foto/slider/1.jpeg" alt="Flower" width="460" height="345">
+                        <img src="foto-project/slider.jpg" alt="" width="460" height="345">
                     </div>
 
                     <div class="item">
-                        <img src="default%20foto/camicia/preview.jpg" alt="Flower" width="460" height="345">
+                        <img src="foto-project/slider.jpg" alt="" width="460" height="345">
+                    </div>
+
+                    <div class="item">
+                        <img src="foto-project/slider.jpg" alt="" width="460" height="345">
                     </div>
                 </div>
                 </div>
             </div>
         </body>
-
 
 
         <!------------------------- Navbar here ------------------->
@@ -122,24 +126,40 @@
             </div>
         </nav>
 
+        <center>
+            <img src="foto-project/PRODUTOS.jpg" alt="" width="420" height="25">
+        </center></br>
 
+
+        <p class="thumb">
+            <img src="foto-project/Carousel/1.jpg" alt="" width="170" height="290">
+            <img src="foto-project/Carousel/2.jpg" alt="" width="170" height="290">
+            <img src="foto-project/Carousel/3.jpg" alt="" width="170" height="290">
+            <img src="foto-project/Carousel/4.jpg" alt="" width="170" height="290">
+            <img src="foto-project/Carousel/5.jpg" alt="" width="170" height="290">
+            <img src="foto-project/Carousel/6.jpg" alt="" width="170" height="290">
+        </p></br>
+        </br>
+        <center>
+        <img src="foto-project/line_End_slider.jpg" alt="" width="130" height="30">
+</center></br>
 
         <!----------- foto-gallery ------------->
         <div class="col-sm-7 col-md-6">
             <div class="thumbnail">
-                <img src="default%20foto/Jackets/maxresdefault3.jpg" alt="">
+                <img src="foto-project/1_jackets.jpg" alt="">
                 <a href><span>JACKETS</span>
                 </a>
             </div>
 
             <div class="thumbnail">
-                <img src="default%20foto/camicia/preview.jpg" alt="">
+                <img src="foto-project/2_shorts.jpg" alt="">
                 <a href><span>CAMICIA</span>
                 </a>
             </div>
 
             <div class="thumbnail">
-                <img src="default%20foto/pants/previewP.jpg" alt="">
+                <img src="foto-project/3_jacket%20wind.jpg" alt="">
                 <a href><span>PANTS</span>
                 </a>
             </div>
@@ -148,29 +168,59 @@
 
         <div class="col-sm-5 col-md-6">
             <div class="thumbnail">
-                <img src="default%20foto/shorts/444.jpg" alt="">
+                <img src="foto-project/4_camicia.jpg" alt="">
                 <a href><span>SHORTS</span>
                 </a>
             </div>
 
             <div class="thumbnail">
-                <img src="default%20foto/Jackets%20wind/22.jpg" alt="">
+                <img src="foto-project/5_pants.jpg" alt="">
                 <a href><span>JACKETS TO WINDS</span>
                 </a>
             </div>
 
             <div class="thumbnail">
-                <img src="default%20foto/T-Shirts/preT.jpg" alt="">
+                <img src="foto-project/6_T-shirt.jpg" alt="">
                 <a href><span>T-SHIRTS</span>
                 </a>
             </div>
         </div>
+        </br>
 
-<footer class="footer"><center>
+        <center>
+            <img src="foto-project/instagram_line.jpg" alt="" width="420" height="25">
+        </center></br>
 
-        <div class="copyright">
+        <p><center>
+            <img src="foto-project/Instagram/1.jpg" alt="" width="250" height="250">
+            <img src="foto-project/Instagram/2.jpg" alt="" width="250" height="250">
+            <img src="foto-project/Instagram/3.jpg" alt="" width="250" height="250">
+            <img src="foto-project/Instagram/4.jpg" alt="" width="250" height="250">
+            <img src="foto-project/Instagram/5.jpg" alt="" width="250" height="250">
+        </p></center>
+        </br>
 
-            <span>Designed By</span>
+        <center>
+            <img src="foto-project/line_USA.jpg" alt="" width="400" height="25">
+        </center></br>
+
+        <p><center>
+            <img src="foto-project/Stars/1.jpg" alt="" width="300" height="300">
+            <img src="foto-project/Stars/2.jpg" alt="" width="300" height="300">
+            <img src="foto-project/Stars/3.jpg" alt="" width="300" height="300">
+            <img src="foto-project/Stars/4.jpg" alt="" width="300" height="300">
+        </p></center>
+        </br>
+
+        <footer class="container-fluid text-center">
+
+            <form class="form-inline">
+                <input type="email" class="form-control" size="30" placeholder="NOME">
+                <input type="email" class="form-control" size="30" placeholder="E - MAIL">
+                <a href="#" class="button"/>CADASTRAR</a>
+            </form>
+        </footer>
+
 
             <div class="table">
             <table>
@@ -180,7 +230,7 @@
             <th><a href="https://github.com/SoClear" target="_blank">Github</a></th>
                     <th><a href="http://www.cleardesign.me" target="_blank">WebSite</a></th>
             <th><a href="https://www.facebook.com" >f</a>
-                <a href="http://https://twitter.com"><img src="default%20foto/logo/twit3.png" alt=""></a></th>
+                <a href="http://https://twitter.com"><img src="foto-project/Logo/twit3.png" alt=""></a></th>
                 </tr>
             </table>
                 </div>
