Element carousel has been added

--- a/index.html
+++ b/index.html
@@ -130,16 +130,67 @@
             <img src="foto-project/PRODUTOS.jpg" alt="" width="420" height="25">
         </center></br>
 
+        <!---------------- CAROUSEL 2x1 ---------------------------------------------->
+        <body id="rootBody">
 
-        <p class="thumb">
-            <img src="foto-project/Carousel/1.jpg" alt="" width="170" height="290">
-            <img src="foto-project/Carousel/2.jpg" alt="" width="170" height="290">
-            <img src="foto-project/Carousel/3.jpg" alt="" width="170" height="290">
-            <img src="foto-project/Carousel/4.jpg" alt="" width="170" height="290">
-            <img src="foto-project/Carousel/5.jpg" alt="" width="170" height="290">
-            <img src="foto-project/Carousel/6.jpg" alt="" width="170" height="290">
-        </p></br>
-        </br>
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed pull-left" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#"><h6>FRETE GRATIS PARA COMPRAS ACIMA DE R$300,00</h6></a>
+                </div>
+                <div id="navbar" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+
+                        <li>  <a id="myAction1"> Action 1</a></li>
+                        <li> <a id="myAction3"> Action 2</a></li>
+
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <div class="wrapper">
+
+            <div class="jcarousel-wrapper">
+                <div class="jcarousel" data-jcarousel="true">
+                    <ul style="left: 85px; top: 0px;">
+                        <li style="width: 200px;"><img src="foto-project/Carousel/1.jpg" alt="Image 3"></li>
+                        <li style="width: 200px;"><img src="foto-project/Carousel/2.jpg" alt="Image 4"></li>
+                        <li style="width: 200px;"><img src="foto-project/Carousel/3.jpg" alt="Image 5"></li>
+                        <li style="width: 200px;"><img src="foto-project/Carousel/4.jpg" alt="Image 6"></li>
+                        <li style="width: 200px;"><img src="foto-project/Carousel/5.jpg" alt="Image 1"></li>
+                        <li style="width: 200px;"><img src="foto-project/Carousel/6.jpg" alt="Image 2"></li>
+                    </ul>
+                </div>
+
+                <a href="#" class="jcarousel-control-prev" data-jcarouselcontrol="true">‹</a>
+                <a href="#" class="jcarousel-control-next" data-jcarouselcontrol="true">›</a>
+
+                <p class="jcarousel-pagination" data-jcarouselpagination="true" style="display: none;">
+                    <a href="#1" class="">1</a>
+                    <a href="#2" class="">2</a>
+                    <a href="#3" class="">3</a>
+                    <a href="#4" class="">4</a>
+                    <a href="#5" class="">5</a>
+                    <a href="#6" class="active">6</a>
+                </p>
+            </div>
+        </div>
+
+
+        <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jcarousel/0.3.4/jquery.jcarousel.min.js"></script>
+        <script src="js/scripts.js"></script>
+
+        <!---------------- CAROUSEL 2x1 ---------------------------------------------->
+
         <center>
         <img src="foto-project/line_End_slider.jpg" alt="" width="130" height="30">
 </center></br>
@@ -226,9 +277,13 @@
             <table>
                 <tr>
                     <!-- background color with using file style.css -->
-                    <th><a href="Licence.html" target="_blank">Licence</a></th>
-            <th><a href="https://github.com/SoClear" target="_blank">Github</a></th>
-                    <th><a href="http://www.cleardesign.me" target="_blank">WebSite</a></th>
+                    <th><a href="" target="_blank">___</a></th>
+
+                    <th><a href="Licence.html" target="_blank">SOBRE</a></th>
+            <th><a href="https://github.com/SoClear" target="_blank">CONTATO</a></th>
+            <th><a href="Licence.html" target="_blank">TERMOS $ CONDICOES</a></th>
+            <th><a href="Licence.html" target="_blank">POLITICA DE PROVACIDADE</a></th>
+
             <th><a href="https://www.facebook.com" >f</a>
                 <a href="http://https://twitter.com"><img src="foto-project/Logo/twit3.png" alt=""></a></th>
                 </tr>
@@ -240,5 +295,6 @@
 
 
 </body>
-
+</body>
+</html>
 </html>
