Pixes behaviour has been changed

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
                     <th><a href="Licence.html" target="_blank">SOBRE</a></th>
                     <th><a href="https://github.com/SoClear" target="_blank">CONTATO</a></th>
-                    <th><a href="Licence.html" target="_blank">TERMOS $ CONDICOES</a></th>
+                    <th><a href="Licence.html" target="_blank">TERMOS & CONDICOES</a></th>
                     <th><a href="Licence.html" target="_blank">POLITICA DE PROVACIDADE</a></th>
 
                     <th><a href="https://www.facebook.com"><img width="24"
