--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
 <div class="container-fluid text-center">
     <div class="container row">
         <form class="form-inline">
+            <a href="#" class="button1"/>NEWSLETTER</a>
             <input type="email" class="form-control" size="30" placeholder="NOME">
             <input type="email" class="form-control" size="30" placeholder="E - MAIL">
             <a href="#" class="button"/>CADASTRAR</a>
